Creathe Project Section

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <link rel="stylesheet" href="css/components/section.css">
         <link rel="stylesheet" href="css/components/skills-tec.css">
         <link rel="stylesheet" href="css/components/progress-bar.css">
+        <link rel="stylesheet" href="css/components/main-project.css">
     </head>
 
     <body>
@@ -95,6 +96,25 @@
                         <progress class="progress-bar" value="0.50">50%</progress>
                     </div>
 
+                </article>
+            </div>
+        </section>
+
+        <section class="section -projects">
+            <h2 class="main-title -second">Projetos</h2>
+            <div class="wrapper">
+                <article class="main-project"> 
+                    <div class="wrapper">
+                        <img class="icon" src="assets/img/Logo.png">
+                        <h3 class="description">Tonny's Web House</h3>
+                    </div>        
+                </article>
+
+                <article class="main-project"> 
+                    <div class="wrapper">
+                        <img class="icon" src="assets/img/Presente aos Psicanalista.png">
+                        <h3 class="description">Livro: Presente aos Pscicanalistas</h3>
+                    </div>        
                 </article>
             </div>
         </section>
