Trade Button to Main-Button to Fatoration

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <link rel="stylesheet" href="css/index.css">   
 
         <!--Components-->
-        <link rel="stylesheet" href="css/components/main-header.css">
-        <link rel="stylesheet" href="css/components/header-action.css">
+        <link rel="stylesheet" href="css/components/Main Header/main-header.css">
+        <link rel="stylesheet" href="css/components/Main Header/header-action.css">
         <link rel="stylesheet" href="css/components/main-title.css">    
         <link rel="stylesheet" href="css/components/logo.css">
-        <link rel="stylesheet" href="css/components/button.css">
+        <link rel="stylesheet" href="css/components/main-button.css">
         <link rel="stylesheet" href="css/components/box-tittle.css">
         <link rel="stylesheet" href="css/components/banner.css">
         <link rel="stylesheet" href="css/components/section.css">
@@ -27,14 +27,14 @@
 
     <body>
         <header class="main-header"> 
-            <img class="icon" src="assets/img/Logo.png" alt="Logo do Tonny's Web House" class="logo">    
+            <img class="icon" src="assets/img/Logo.png" alt="Logo do Tonny's Web House">    
             
             <nav class="navigation">
                 <a class="header-action" href="">Musicas</a>
                 <a class="header-action" href="">Projetos</a>
                 <a class="header-action" href="">Sobre</a>
                 <a class="header-action" href="">Contato</a> 
-                <a class="button" href="carta_ao_leitor.html" lang="en">Carta ao Leitor</a>
+                <a class="main-button" href="carta_ao_leitor.html" lang="en">Carta ao Leitor</a>
             </nav>
         </header>
 
@@ -45,8 +45,8 @@
                 </div>       
                 
                 <div class="navigation">
-                    <a class="button" href="carta_ao_leitor.html" lang="en">Carta ao Leitor</a>
-                    <a class="button" href="">Contato</a>            
+                    <a class="main-button" href="carta_ao_leitor.html" lang="en">Carta ao Leitor</a>
+                    <a class="main-button" href="">Contato</a>            
                 </div>
             </div>
         </section>
@@ -97,6 +97,7 @@
                     </div>
 
                 </article>
+
             </div>
         </section>
 
@@ -111,6 +112,13 @@
                 </article>
 
                 <article class="main-project"> 
+                    <div class="wrapper">
+                        <img class="icon" src="assets/img/Presente aos Psicanalista.png">
+                        <h3 class="description">Livro: Presente aos Pscicanalistas</h3>
+                    </div>        
+                </article>
+
+                  <article class="main-project"> 
                     <div class="wrapper">
                         <img class="icon" src="assets/img/Presente aos Psicanalista.png">
                         <h3 class="description">Livro: Presente aos Pscicanalistas</h3>
