Trade <a class button> lang fromt en to pt-br

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <a class="header-action" href="">Projetos</a>
                 <a class="header-action" href="">Sobre</a>
                 <a class="header-action" href="">Contato</a> 
-                <a class="main-button" href="carta_ao_leitor.html" lang="en">Carta ao Leitor</a>
+                <a class="main-button" href="carta_ao_leitor.html">Carta ao Leitor</a>
             </nav>
         </header>
 
