--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <!--Components-->
         <link rel="stylesheet" href="css/components/Main Header/main-header.css">
         <link rel="stylesheet" href="css/components/Main Header/header-action.css">
+          <link rel="stylesheet" href="css/components/main-banner.css">
         <link rel="stylesheet" href="css/components/main-title.css">    
         <link rel="stylesheet" href="css/components/logo.css">
         <link rel="stylesheet" href="css/components/main-button.css">
         <link rel="stylesheet" href="css/components/box-tittle.css">
-        <link rel="stylesheet" href="css/components/banner.css">
         <link rel="stylesheet" href="css/components/section.css">
         <link rel="stylesheet" href="css/components/skills-tec.css">
         <link rel="stylesheet" href="css/components/progress-bar.css">
@@ -38,7 +38,7 @@
             </nav>
         </header>
 
-        <section class="banner">
+        <section class="main-banner">
             <div class="wrapper">   
                 <div class="box-title">
                     <h1 class="main-title">Tonny's Web<br>House</h1>
