Trade the Musicas Header action to Skills on the fatoration

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <img class="icon" src="assets/img/Logo.png" alt="Logo do Tonny's Web House">    
             
             <nav class="navigation">
-                <a class="header-action" href="">Musicas</a>
+                <a class="header-action" href="">Skills</a>
                 <a class="header-action" href="">Projetos</a>
                 <a class="header-action" href="">Sobre</a>
                 <a class="header-action" href="">Contato</a> 
