--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <img class="icon" src="assets/img/formacaosimbolo.png">
                     
                     <div class="rigth">
-                        <h3>Ensino Médio</h3>    
+                        <h3>Ensino Médio e Fundamental</h3>    
                         <progress class="progress-bar" value="0.50">50%</progress>
                     </div>
                 </article>
