Add the Book 'O Topo do Bolo'

--- a/index.html
+++ b/index.html
@@ -105,30 +105,25 @@
         </section>
 
         <section class="main-section -projects">
+
             <h2 class="main-title -second">Projetos</h2>
+
             <div class="wrapper">
-                <article class="main-project"> 
-                <div class="wrapper">    
+
+                <figure class="main-project"> 
                     <img class="icon" src="assets/img/Logo.png">
-                    <h3 class="description">Tonny's Web House</h3>
-                </div>
-                </article>
-                
+                    <figcaption class="description">Tonny's Web House</figcaption>
+                </figure>
 
-                <article class="main-project"> 
-                    <div class="wrapper">
+                <figure class="main-project"> 
                         <img class="icon" src="assets/img/Presente aos Psicanalista.png">
-                        <h3 class="description">Livro: Presente aos Pscicanalistas</h3>
-                    </div>   
-                </article>
-    
+                        <figcaption class="description">Presente aos Pscicanalistas</figcaption>
+                </figure>
 
-                  <article class="main-project">
-                    <div class="wrapper"> 
-                        <img class="icon" src="assets/img/Presente aos Psicanalista.png">
-                        <h3 class="description">Livro: Presente aos Pscicanalistas</h3>
-                    </div>    
-                </article>
+                <figure class="main-project"> 
+                        <img class="icon" src="assets/img/O Topo do Bolo.png">
+                        <figcaption class="description">o Topo do Bolo</figcaption>
+                </figure>
             </div>
         </section>
     </body>
