Fix project section bug flex

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
             <div class="wrapper">
 
-                <figure class="main-project"> 
+                <figure class="main-project -background_black"> 
                     <img class="icon" src="assets/img/Logo.png">
                     <figcaption class="description">Tonny's Web House</figcaption>
                 </figure>
