Add 'Biblioteca de Tonny' in projects

--- a/index.html
+++ b/index.html
@@ -115,15 +115,12 @@
                     <figcaption class="description">Tonny's Web House</figcaption>
                 </figure>
 
-                <figure class="main-project"> 
-                        <img class="icon" src="assets/img/Presente aos Psicanalista.png">
-                        <figcaption class="description">Presente aos Pscicanalistas</figcaption>
-                </figure>
-
-                <figure class="main-project"> 
-                        <img class="icon" src="assets/img/O Topo do Bolo.png">
-                        <figcaption class="description">o Topo do Bolo</figcaption>
-                </figure>
+                <a href="https://panetonny.github.io/Biblioteca-de-Tonny/">
+                    <figure class="main-project -background_black"> 
+                        <img class="icon" src="assets/img/biblioetca de tonny.png">
+                        <figcaption class="description">Biblioteca de Tonny</figcaption>
+                    </figure>
+                </a>
             </div>
         </section>
     </body>
