--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <figcaption class="description">Tonny's Web House</figcaption>
                 </figure>
 
-                <a href="https://panetonny.github.io/Biblioteca-de-Tonny/">
+                <a href="https://panetonny.github.io/Biblioteca-de-Tonny/" target="_blank">
                     <figure class="main-project -background_black"> 
                         <img class="icon" src="assets/img/biblioetca de tonny.png">
                         <figcaption class="description">Biblioteca de Tonny</figcaption>
