Add link on the img of the My Web House projetcs

--- a/index.html
+++ b/index.html
@@ -122,12 +122,12 @@
             <h2 class="main-title -second">Projetos</h2>
 
             <div class="wrapper">
-
+            <a href="index.html">
                 <figure class="main-project -background_black"> 
                     <img class="icon" src="assets/img/Logo.png">
                     <figcaption class="description">Tonny's Web House</figcaption>
                 </figure>
-
+            </a>
                 <a href="https://panetonny.github.io/Biblioteca-de-Tonny/" target="_blank">
                     <figure class="main-project -background_black"> 
                         <img class="icon" src="assets/img/biblioetca de tonny.png">
