Create que About Me Section

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="css/index.css">   
 
         <!--Components-->
+        <link rel="stylesheet" href="css/index.css">
         <link rel="stylesheet" href="css/components/Main Header/main-header.css">
         <link rel="stylesheet" href="css/components/Main Header/header-action.css">
         <link rel="stylesheet" href="css/components/main-button.css">
@@ -22,6 +23,8 @@
         <link rel="stylesheet" href="css/components/skills-tec.css">
         <link rel="stylesheet" href="css/components/progress-bar.css">
         <link rel="stylesheet" href="css/components/main-project.css">
+        <link rel="stylesheet" href="css/components/main-paragrafo.css">
+        <link rel="stylesheet" href="css/components/aboutme-comp.css">
     </head>
 
     <body>
@@ -135,6 +138,33 @@
                     </figure>
                 </a>
             </div>
+        </section>
+
+        <section class="main-section -aboutme">
+
+            <h2 class="main-title -second">Sobre Mim</h2>
+
+            <div class="center">
+                <article class="aboutme-comp">
+                                
+                    <div class="wrapper">
+
+                        <figure>
+
+                            <img class="icon" src="assets/img/porphilephoto.jpg">
+                            
+                            <figcaption class="description">*Imagems Reais Minha*</figcaption>
+                        </figure>
+                        <p class="main-paragrafo">Olá estranho que por algum motivo se entressa em ler sobre mim. Sou Tonny, aos invés de falar minha idade, e ter que vim aqui trocar todo ano, prefiro só colocar uma vez que nasci no ano de 2008 dia 27 de junho, e deixar a seu trabalho somar. Decidi criar esse site com o objetivo de aprendizado. Estou aprendendo html, e quando se aprende html, se aplica, então aqui estou eu, criando uma web casnhinha online onde ao longo do tempo, vou ir autolizando com proetos meus. Quero muito mudar o desing que fiz meio correndo e acho que ficou muito feio, mas não vou fazer isso agora, espero que tenha gostado do site, caso não, me ensine a fazer melhor, ficarei muito grato!</p>
+                    </div>
+
+
+                </article>
+            </div>
+
+            <div class="rei">
+                <img src="assets/img/Rei Monstrando o Dedo.png">
+            </div>    
         </section>
     </body>
 </html>
