--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <link rel="stylesheet" href="css/components/main-project.css">
         <link rel="stylesheet" href="css/components/main-paragrafo.css">
         <link rel="stylesheet" href="css/components/aboutme-comp.css">
+        <link rel="stylesheet" href="css/components/main-footer.css">
     </head>
 
     <body>
@@ -153,7 +154,7 @@
 
                             <img class="icon" src="assets/img/porphilephoto.jpg">
                             
-                            <figcaption class="description">*Imagems Reais Minha*</figcaption>
+                            <figcaption class="description">*Imagens Reais Minha*</figcaption>
                         </figure>
                         <p class="main-paragrafo">Olá estranho que por algum motivo se entressa em ler sobre mim. Sou Tonny, aos invés de falar minha idade, e ter que vim aqui trocar todo ano, prefiro só colocar uma vez que nasci no ano de 2008 dia 27 de junho, e deixar a seu trabalho somar. Decidi criar esse site com o objetivo de aprendizado. Estou aprendendo html, e quando se aprende html, se aplica, então aqui estou eu, criando uma web casnhinha online onde ao longo do tempo, vou ir autolizando com proetos meus. Quero muito mudar o desing que fiz meio correndo e acho que ficou muito feio, mas não vou fazer isso agora, espero que tenha gostado do site, caso não, me ensine a fazer melhor, ficarei muito grato!</p>
                     </div>
@@ -166,6 +167,12 @@
                 <img src="assets/img/Rei Monstrando o Dedo.png">
             </div>    
         </section>
+
+        <footer class="main-footer">
+            <a href="https://discordapp.com/users/1365000649359495282">
+                <img src="assets/img/Discord Logo.png" alt="Discord Logo">
+            </a>
+        </footer>
     </body>
 </html>
 
